--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Counter App</title>
-  <link rel="icon" href="./public/imges/clock-regular.svg" type="image/svg">
+  <title>Timer App</title>
+  <link rel="icon" href="./src/assets/react.svg" type="image/svg">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" />
 </head>
 
